<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProtoShade</string>
    <string name="action_settings">Settings</string>
    <string name="tv_seconds">%d sec.</string>
    <string name="action_save">Save Shader</string>
    <string name="action_load">Load Shader</string>
    <string name="btn_compile">Compile</string>
    <string name="compile_error_general">The shader could not be compiled.</string>
    <string name="loading_obj">Loading OBJ %s …</string>
    <string name="btn_compile_error">Error</string>
    <string name="btn_no_compile_errors">No Errors</string>
    <string name="shader_preview">Shader Preview</string>
    <string name="shader_title">Title</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_save_shader">Save Shader …</string>
    <string name="shader_saved">Shader Saved</string>
    <string name="error_file_io_exception">Error: Could not write shader to storage.</string>
    <string name="reset_time">Reset Time</string>
    <string name="error_empty_filename">Error: Please use alphanumeric characters.</string>
    <string name="compiler_log">GLSL Compiler Log</string>
    <string name="dismiss">Dismiss</string>
    <string name="edit">Edit</string>
    <string name="pause_animation">Pause Animation</string>
    <string name="preference_category_3d_renderer">3D Renderer</string>
    <string name="preference_desc_3d_model">The model onto which the shader is rendered</string>
    <string name="preference_3d_model">3D Model</string>
    <string name="preference_category_animator">Animator</string>
    <string name="preference_auto_rotate">Rotate in Editor</string>
    <string name="preference_description_auto_rotate">Rotate the model when in the editor</string>
    <string name="title_preferences">ProtoShade Preferences</string>
    <string name="new_shader">New Shader</string>
    <string name="ok">OK</string>

    <string name="admob_banner_id">ca-app-pub-8028170723246982/1183410157</string>
    <string name="main_activity_banner_id">ca-app-pub-8028170723246982/1997398952</string>


    <string name="texture_filtering_mode">Texture Filtering Mode</string>
    <string name="texture_wrapping_mode">Texture Wrapping Mode</string>
    <string name="sampler_dialog_title">Sampler Settings</string>
    <string name="select_image_from_phone">Browse</string>
    <string name="default_texture_image">Default</string>
    <string name="sampler_image_source">Sampler Image Source</string>
    <string name="select_image">Select Image</string>
    <string name="last_used_image_not_found">The last-used image could not be found</string>
    <string name="pref_texture_could_not_be_loaded">The preferred texture could not be loaded</string>
    <string name="texture_preview">Texture Preview</string>
    <string name="storageUnavailable">Storage is Unavailable</string>
    <string name="storageUnavailable_message">It seems that your device\'s public storage is unavailable.\n\nOn some devices, the external storage becomes unavailable when connected to a computer.\n\nPlease try again; sorry!</string>
    <string name="source_file_missing">Source file missing</string>
    <string name="error_format_shader_source_not_found" formatted="false" >The source file for this shader (%s) could not be found in the ProtoShade data directory:\n%s\n\nYou may choose to remove this entry.</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="help">Help</string>
    <string name="shader_list_help_message">Your shaders and their associated preview renders are stored in your phone\'s public storage at this path:\n\n%s</string>
    <string name="shader_list_delete_shader_title">Delete Shader?</string>
    <string name="shader_list_delete_shader_message">Do you wish to delete this shader?\n\nYou may choose to delete the shader and its files, or just this list item (metadata).</string>
    <string name="delete_keep_files">Delete (Keep Files)</string>
    <string name="delete">Delete</string>
    <string name="cannot_modify_built_in_shader">Cannot modify a built-in shader</string>

    <string-array name="filter_modes">
        <item>Linear</item>
        <item>Nearest-Neighbor</item>
    </string-array>

    <string-array name="wrap_mode">
        <item>Repeat</item>
        <item>Mirrored Repeat</item>
        <item>Clamp to Edge</item>
    </string-array>

</resources>
