<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MenuActivity" >

    <item android:id="@+id/action_texture"
        android:title="Sampler"
        android:showAsAction="always"/>

    <item android:id="@+id/action_load"
        android:title="@string/action_load"
        android:icon="@drawable/ic_action_load"
        android:showAsAction="always"/>

    <item android:id="@+id/action_save"
        android:title="@string/action_save"
        android:icon="@drawable/ic_action_save"
        android:showAsAction="always"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="always" />

</menu>
